# AKSAY-GRILL

./: .gitignore  .replit  CHANGELOG.md  CHANGELOG_FOR_CLIENT.txt  GUIDE.md  app.py  forms.py  index.html  mailer.py  models.py  orders.html  package-lock.json  package.json  privacy.html  pyproject.toml  replit.md  routes_admin.py  routes_public.py  tailwind.config.js
.agents/: agent_assets_metadata.toml
.claude/: settings.json
assets/css/: main.css
attached_assets/: Pasted--1-1--1776997517135_1776997517135.txt  Pasted--Python-Flask-SQLite--1777295928505_1777295928505.txt
templates/: about.html  base_public.html  business-lunch.html  catering.html  events.html  index.html  privacy.html  spasibo.html
templates/admin/: archive.html  archive_setup.html  base.html  business_lunches.html  catering.html  dashboard.html  delivery_orders.html  email_settings.html  events.html  login.html  menu.html  menu_dish_form.html  requisites.html  setup.html  stats.html  texts.html
